Fix transform overflow-x for modal dropin scrolling

--- a/Assets/adminui/sass/_base.sass
+++ b/Assets/adminui/sass/_base.sass
@@ -1,9 +1,7 @@
-html
-  overflow-x: hidden
-
 body
   padding: 0
   margin: 0
+  overflow-x: hidden
 
   // better helvetica font
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
